finish ordering and pagination for get account
